# bachelor_thesis

./: .gitignore  Cargo.toml  README.md  index.js  styles.css
.github/workflows/: deploy.yml
crystallography/: Cargo.toml  grammar.pest
crystallography/grammars/: op_list.pest
crystallography/groups/point_groups/: example.sg
crystallography/groups/space_groups/: C2|m  Cmcm  Fm-3m  P-1  P2_12_12  R-3m
crystallography/src/: affine_space.rs  frac.rs  lib.rs  macros.rs  objects.rs  parsers.rs  symmetry.rs  unit_cell.rs
files/input/: commented_example  example1  example2  unparsable_example
files/output/: example1  example2
files/space_groups/: P2_1  P2_12_12_1  P6_3|mmc  Pmna
find-pairs/: Cargo.toml
find-pairs/src/: main.rs
presentation/: input.txt  presentation.typ
presentation/scripts/: __main__.py  generator.py  one_d.py  two_d.py  utils.py  wyckoff.py
report/: .gitignore  main.typ  ref.bib
report/scripts/: __main__.py  dpdf.py  one_d.py  test.py  title.py  two_d.py  utils.py
website/: .gitignore  Cargo.toml
website/site/: index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
website/src/: lib.rs
